--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.css" integrity="sha512-+ouAqATs1y4kpPMCHfKHVJwf308zo+tC9dlEYK9rKe7kiP35NiP+Oi35rCFnc16zdvk9aBkDUtEO3tIPl0xN5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="body">
     <img class="top-eclipse" src="images/Ellipse 1.png" alt="">
     <div class="container">
         <header>
@@ -21,10 +22,12 @@
                     <li>About</li>
                     <li>Library</li>
                     <li class="search">
-                        <img class="circle" src="images/Vector.png" alt="">
-                        <img class="line" src="images/Vector (1).png" alt="">
+                        <img src="images/search-normal-1 1.png" alt="">
                     </li>
                 </ul>
+            </div>
+            <div class="respansive-burger">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </header>
         <section class="main">
@@ -35,16 +38,17 @@
                     <div class="button"><span>Let's Try</span></div>
                     <div class="otherSnippets"><span>See other’s Snippets</span></div>
                 </div>
-                <div class="flash">
-                    <img class="flash-line" src="images/Vector3.png" alt="">
-                    <img class="flash-dir" src="images/Vector4.png" alt="">
-                </div>
             </div>
-            <div class="image">
+            <div class="main-image">
                 <img src="images/Saly-13.png" alt="">
                 <img class="eclipse" src="images/Ellipse 2.png" alt="">
             </div>
         </section>
+        <footer class="footer">
+            <div class="flash">
+                <img src="images/arrow-down 1.png" alt="">
+            </div>
+        </footer>
     </div>
 </body>
 </html>
